2012-06-06  Zoltan Horvath  <zoltan@webkit.org>

        [Qt] Qt DRT / WTR should be able to load external resources
        https://bugs.webkit.org/show_bug.cgi?id=87326

        Reviewed by Hajime Morita.

        Allow external resources to be loaded when the main frame's URL is also an external resource.
        This change is analogous to r118231 for Mac port and to r119153 Chromium port.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::blockRequest):
        (WebCore):
        (WebCore::isLocalhost):
        (WebCore::hostIsUsedBySomeTestsToGenerateError):
        (WebCore::FrameLoaderClientQt::dispatchWillSendRequest):

2012-06-05  Max Feil  <mfeil@rim.com>

        [BlackBerry] Conditionally enlarge HTML5 video controls in fullscreen mode
        https://bugs.webkit.org/show_bug.cgi?id=87551

        Reviewed by Antonio Gomes.

        Add a new parameter to adjustSliderThumbSize() for BlackBerry
        port. Fixing compiles of other ports.

        * WebCoreSupport/RenderThemeQStyle.cpp:
        (WebCore::RenderThemeQStyle::adjustSliderThumbSize):
        * WebCoreSupport/RenderThemeQStyle.h:
        (RenderThemeQStyle):

2012-06-04  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r119384.
        http://trac.webkit.org/changeset/119384
        https://bugs.webkit.org/show_bug.cgi?id=88227

        Need to update some tests, I'll roll in later. (Requested by
        Zoltan on #webkit).

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchWillSendRequest):

2012-06-04  Zoltan Horvath  <zoltan@webkit.org>

        [Qt] Qt DRT / WTR should be able to load external resources
        https://bugs.webkit.org/show_bug.cgi?id=87326

        Reviewed by Ryosuke Niwa.

        Allow external resources to be loaded when the main frame's URL is also an external resource.
        This change is analogous to r118231 for Mac port and to r119153 Chromium port.
